--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="w-1/2 h-full flex items-center justify-end pr-9 gap-6 text-sm text-gray-400">
           <span>Privacidad</span>
           <span>Condiciones</span>
-          <span>Preferencias</span>
+          <span>Preferenciass</span>
         </div>
       </div>
     </footer>
